[package]
name = "keychron-tracker"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "=0.3.41", features = ["formatting", "local-offset", "macros", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time"] }
zbus = { version = "=5.11.0", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.10"
